[package]
name = "ggez"
description = "A lightweight game framework for making 2D games with minimum friction, inspired by Love2D."
version = "0.5.1"
homepage = "http://ggez.rs"
repository = "https://github.com/ggez/ggez"
documentation = "https://docs.rs/ggez"
keywords = ["ggez", "graphics", "2D", "game", "engine"]
authors = [
   "Rafael Epplee <raffomania@gmail.com>",
   "Sven-Hendrik Haase <svenstaro@gmail.com>",
   "Simon Heath <icefoxen@gmail.com>",
]

edition = "2018"
license = "MIT"
readme = "README.md"
categories = ["game-engines"]
build = "build.rs"

[badges]
maintenance = { status = "passively-maintained" }

[lib]
name = "ggez"
path = "src/lib.rs"

[features]

[dependencies]
bitflags = "1"
cpal = {git = "https://github.com/doukutsu-rs/cpal.git", branch = "android-support"}
directories = "3"
gfx = "0.18"
gfx_core = "0.9"
gfx_device_gl = {git = "https://github.com/doukutsu-rs/gfx.git", branch = "pre-ll"}
glyph_brush = "0.6"
glutin = {git = "https://github.com/doukutsu-rs/glutin.git", branch = "android-support"}
winit = "0.23.0"
image = { version = "0.22", default-features = false, features = ["png_codec", "pnm", "bmp"] }
serde = "1"
serde_derive = "1"
log = "0.4"
lyon = "0.14"
smart-default = "0.6"
strum = "0.18.0"
nalgebra = {version = "0.21", features = ["mint"]}
# Has to be the same version of mint that our math lib uses here.
mint = "0.5"
gilrs = "0.7"
approx = "0.3"

[dev-dependencies]
chrono = "0.4"
fern = "0.5"
rand = "0.7"
structopt = "0.2"
cgmath = { version = "0.17", features = ["mint"]}
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"

